--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "oclif-plugin-update-notifier",
+  "description": "update-notifier for oclif plugins",
   "version": "1.0.1",
   "author": "jayree",
   "bugs": "https://github.com/jayree/oclif-plugin-update-notifier/issues",
