feat: include core plugins

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "**/.DS_Store": true
   },
   "search.exclude": {
-    "**/lib": true,
-    "**/bin": true
+    "lib": true,
+    "bin": true
   }
 }
