--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.37",
     "@types/sinon": "^9.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.21.0",
-    "@typescript-eslint/parser": "^4.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "chai": "^4.3.4",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.1.0",
@@ -47,6 +47,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "globby": "^11.0.3",
     "husky": "^6.0.0",
+    "is-ci": "^3.0.0",
     "mocha": "^8.3.2",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
@@ -99,6 +100,6 @@
     "pretest": "sf-compile-test",
     "test": "sf-test",
     "version": "oclif-dev manifest && oclif-dev readme && git add README.md oclif.manifest.json",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky install"
   }
 }
