--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "bugs": "https://github.com/jayree/oclif-plugin-update-notifier/issues",
   "dependencies": {
+    "@jayree/changelog": "^1.1.0",
     "@oclif/core": "^2.6.4",
     "@salesforce/kit": "^1.9.2",
     "boxen": "^7.0.2",
@@ -21,34 +22,30 @@
     "tslib": "^2.5.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
     "@oclif/plugin-command-snapshot": "^3.3.8",
     "@oclif/plugin-help": "^5.2.8",
     "@oclif/test": "^2.3.10",
     "@salesforce/dev-config": "^3.1.0",
-    "@salesforce/dev-scripts": "^3.1.0",
+    "@salesforce/dev-scripts": "^4.1.3",
     "@salesforce/prettier-config": "^0.0.2",
     "@types/boxen": "^3.0.1",
-    "@types/chai": "^4.3.4",
     "@types/debug": "^4.1.7",
     "@types/fs-extra": "^11.0.1",
     "@types/marked": "^4.0.8",
     "@types/marked-terminal": "^3.1.3",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^18.15.3",
     "@types/semver": "^7.3.13",
-    "@types/sinon": "^10.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
+    "c8": "^7.13.0",
     "chai": "^4.3.7",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-config-salesforce": "^1.1.1",
+    "eslint-config-salesforce-license": "^0.2.0",
     "eslint-config-salesforce-typescript": "^1.1.1",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^39.9.1",
+    "eslint-plugin-jsdoc": "^40.0.3",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
@@ -59,9 +56,9 @@
     "prettier": "^2.8.4",
     "pretty-quick": "^3.1.3",
     "sinon": "^15.0.2",
-    "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2",
+    "wireit": "^0.9.5"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -108,30 +105,122 @@
   },
   "repository": "jayree/oclif-plugin-update-notifier",
   "scripts": {
-    "build": "sf-build",
+    "build": "wireit",
     "clean": "sf-clean",
     "clean-all": "sf-clean all",
-    "clean:lib": "shx rm -rf lib && shx rm -rf coverage && shx rm -rf .nyc_output && shx rm -f oclif.manifest.json",
-    "compile": "sf-compile",
-    "format": "sf-format",
-    "lint": "sf-lint",
-    "lint-fix": "sf-lint --fix",
-    "postcompile": "oclif readme",
-    "postinstall": "patch-package",
-    "postpack": "shx rm -f oclif.manifest.json",
-    "postpublish": "pinst --enable",
-    "posttest": "yarn lint && yarn test:deprecation-policy",
+    "compile": "wireit",
+    "format": "wireit",
+    "lint": "wireit",
     "prepack": "sf-prepack",
-    "prepare": "is-ci || husky install",
-    "prepublishOnly": "pinst --disable",
-    "pretest": "sf-compile-test",
-    "test": "sf-test",
-    "test:deprecation-policy": "./bin/dev.js snapshot:compare",
-    "version": "oclif readme"
+    "prepare": "patch-package && sf-install",
+    "test": "wireit",
+    "version": "oclif readme --no-aliases"
   },
   "release": {
     "branches": [
       "main"
     ]
+  },
+  "wireit": {
+    "build": {
+      "dependencies": [
+        "compile",
+        "lint"
+      ]
+    },
+    "compile": {
+      "command": "tsc --build --pretty",
+      "files": [
+        "src/**/*.ts",
+        "**/tsconfig.json",
+        "messages/**"
+      ],
+      "output": [
+        "lib/**",
+        "*.tsbuildinfo"
+      ],
+      "clean": "if-file-deleted"
+    },
+    "format": {
+      "command": "prettier --write \"+(src|test|schemas)/**/*.+(ts|js|json)|command-snapshot.json\"",
+      "files": [
+        "src/**/*.ts",
+        "test/**/*.ts",
+        "schemas/**/*.json",
+        "command-snapshot.json",
+        ".prettier*"
+      ],
+      "output": []
+    },
+    "lint": {
+      "command": "eslint --color --cache --cache-location .eslintcache .",
+      "files": [
+        "src/**/*.ts",
+        "test/**/*.ts",
+        "messages/**",
+        "**/.eslint*",
+        "**/tsconfig.json"
+      ],
+      "output": []
+    },
+    "test:compile": {
+      "command": "tsc -p \"./test\" --pretty",
+      "files": [
+        "test/**/*.ts",
+        "**/tsconfig.json"
+      ],
+      "output": []
+    },
+    "test": {
+      "dependencies": [
+        "test:deprecation-policy",
+        "lint",
+        "test:json-schema"
+      ]
+    },
+    "test:only": {
+      "command": "c8 mocha \"test/**/*test.ts\"",
+      "env": {
+        "FORCE_COLOR": "2"
+      },
+      "files": [
+        "test/**/*.ts",
+        "src/**/*.ts",
+        "**/tsconfig.json",
+        ".mocha*",
+        "!*.nut.ts",
+        ".nycrc"
+      ],
+      "output": []
+    },
+    "test:command-reference": {
+      "command": "\"./bin/dev.js\" commandreference:generate --erroronwarnings",
+      "files": [
+        "src/**/*.ts",
+        "messages/**",
+        "package.json"
+      ],
+      "output": [
+        "tmp/root"
+      ]
+    },
+    "test:deprecation-policy": {
+      "command": "\"./bin/dev.js\" snapshot:compare",
+      "files": [
+        "src/**/*.ts"
+      ],
+      "output": [],
+      "dependencies": [
+        "compile"
+      ]
+    },
+    "test:json-schema": {
+      "command": "\"./bin/dev.js\" schema:compare",
+      "files": [
+        "src/**/*.ts",
+        "schemas"
+      ],
+      "output": []
+    }
   }
 }
