fix: add oclif.lock

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "/lib",
     "/messages",
     "/oclif.manifest.json",
-    "/CHANGELOG.md"
+    "/CHANGELOG.md",
+    "/oclif.lock"
   ],
   "homepage": "https://github.com/jayree/oclif-plugin-update-notifier",
   "keywords": [
