--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "keywords": [
     "oclif-plugin"
   ],
-  "license": "BSD-3-Clause",
+  "license": "Apache-2.0",
   "oclif": {
     "commands": "./lib/commands",
     "bin": "oclif-example",
@@ -91,6 +91,7 @@
     "clean-all": "sf-clean all",
     "compile": "wireit",
     "docs": "sf-docs",
+    "fix-license": "eslint src test --fix --rule \"header/header: [2]\"",
     "format": "wireit",
     "lint": "wireit",
     "postpack": "sf-clean --ignore-signing-artifacts",
